<resources>
    <string name="app_name">SnapTask</string>
    <string name="title_activity_add_task">AddTask</string>
    <string name="title_add">Add</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_goals">Goals</string>
    <string name="title_notes">Notes</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_activity_home_add">HomeAddActivity</string>
    <string name="please_choose_category">Please choose category:</string>
    <string name="title_activity_test">Test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="choose_day">Choose day</string>
    <string name="choose_date">Choose date:</string>
    <string name="choose_priority">Choose priority:</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="task_name">Task name</string>
    <string name="subtask_name">Subtask name</string>
    <string name="add_subtask">Add subtask</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_sign_out">Don\'t sign out</string>
    <string name="remember_me">Remember me</string>
    <string name="goal_name">Goal name</string>
    <string name="steps">Write steps to help you achieve your goals</string>
    <string name="add_step">Add step</string>
    <string name="write_step">Write step</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="add_task">Add new task</string>
    <string name="day_today">Day: today</string>
    <string name="add_new_goal">Add new goal</string>
    <string name="add_new_note">Add new note</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="about_snaptask">About SnapTask</string>
    <string name="others">Others</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="snap_task">Snap Task</string>
    <string name="zero">0</string>
    <string name="zero_percent">0%</string>

</resources>
