<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".menu.Add"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">



    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/left_nav_view"
        android:layout_gravity="start"
        android:background="@color/blue"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/left_navigation_view"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/blue"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"
            >
            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_add"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                />
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container2"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please choose category:"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rg_cat">
            <RadioButton
                android:id="@+id/notes_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@drawable/radio_btn"
                android:button="@drawable/radio_btn"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/title_notes"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/tasks_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_btn"
                    android:button="@drawable/radio_btn"
                    android:checked="true"
                    android:fontFamily="@font/poppins_semibold"
                    android:onClick="displayNotification"
                    android:text="@string/title_tasks"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            <RadioButton
                android:id="@+id/goals_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@drawable/radio_btn"
                android:button="@drawable/radio_btn"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/title_goals"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textAlignment="center"/>
            </RadioGroup>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/stripe"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container"
            android:layout_marginBottom="55dp"/>



    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/white"
        app:itemTextColor="@color/dark_blue"
        app:menu="@menu/bottom_menu"
        app:itemIconTint="@color/dark_blue"
        />

    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>