<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".menu.Statistics"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/left_nav_view"
        android:layout_gravity="start"
        android:background="@color/blue"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/left_navigation_view"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/blue"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_statistic"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please choose period:"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_below="@+id/toolbar"
            android:id="@+id/text_choose"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text_choose"
            android:id="@+id/lin_lay">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rg_cat">
                <RadioButton
                    android:id="@+id/week_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@drawable/radio_btn"
                    android:button="@drawable/radio_btn"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/week"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/month_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@drawable/radio_btn"
                    android:button="@drawable/radio_btn"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/month"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/year_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@drawable/radio_btn"
                    android:button="@drawable/radio_btn"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/year"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/stripe"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/lin_lay"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/completed_tasks"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Completed tasks"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Uncompleted tasks"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/completed_tasks_values"
            android:layout_below="@+id/completed_tasks"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/comp_tasks_value"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="45"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/switch_button"
                android:textAlignment="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/uncomp_tasks_value"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="11"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/switch_button"
                android:textAlignment="center"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Activity:"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_below="@+id/completed_tasks_values"
            android:id="@+id/text_activity"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/activity_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100%"
            android:textColor="@color/dark_blue"
            android:textSize="62sp"
            android:fontFamily="@font/poppins"
            android:background="@drawable/blue_circle"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_below="@+id/text_activity"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/activity_percent"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Achived goals"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/competed_goals"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="11"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:background="@drawable/switch_button"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingStart="70dp"
                android:paddingEnd="70dp"/>

        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/white"
        app:itemTextColor="@color/dark_blue"
        app:menu="@menu/bottom_menu"
        app:itemIconTint="@color/dark_blue"
        />


    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>